--- a/project-b-draft/style.css
+++ b/project-b-draft/style.css
@@ -72,13 +72,53 @@ canvas{
 .Text{
   background-color: rgb(224, 207, 241);
   color: rgb(59, 40, 40);
-  font-size: 20px;
-  width: 700px;
-  height: 700px;
+  font-size: 40px;
+  width: 800px;
+  height: 90px;
   position: absolute;
   top: 185px;
   outline: 4px rgb(236, 77, 15) dotted;
-  left: 20px;
+  margin-left: 400px;
+}
+
+.Read{
+  background-color: rgb(224, 207, 241);
+  color: rgb(59, 40, 40);
+  font-size: 30px;
+  width: 800px;
+  height: 70px;
+  position: absolute;
+  top: 185px;
+  outline: 4px rgb(236, 77, 15) dotted;
+  margin-left: 400px;
+  margin-top: 500px;
+}
+
+.Instruction{
+  background-color: rgb(224, 207, 241);
+  color: rgb(59, 40, 40);
+  font-size: 30px;
+  width: 800px;
+  height: 340px;
+  position: absolute;
+  top: 185px;
+  outline: 4px rgb(236, 77, 15) dotted;
+  margin-left: 400px;
+  margin-top: 130px;
+}
+
+.pic2{
+  margin-left: 1300px;
+  width: 300px;
+  top: 170px;
+  position: absolute;
+}
+
+.Proceed{
+  margin-left: 1300px;
+  font-size: 50px;
+  margin-top: 200px;
+  position: absolute;
 }
 
 /* This is for random monster pictures */
@@ -100,5 +140,3 @@ canvas{
   margin-left: 600px;
   outline: 3px black solid;
 }
-
-
